# PlaylistOrganizer-py-clean

./: .cursorrules  .gitignore  App.xaml  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  PlaylistOrganizer.code-workspace  README.md  VERSION  algorithm_analysis.js  analyze_missed_matches.js  build_mac.sh  comprehensive_parentheses_analysis.js  comprehensive_test_system.js  correct_path.txt  database-improvements.sql  database-schema-analysis.swift  debug_funda_oncu.js  debug_history.js  debug_sari_sari.js  debug_sorting_algorithm.js  debug_specific_match.js  deep_similarity_analysis.js  detailed-code-analysis.swift  detailed_log_test.js  detailed_simple_algorithm_log.js  dynamic_views.sql  fast_similarity_test.js  full_detailed_log_test.js  full_scale_test.js  improved_similarity_test.js  m3u_fix_api.js  m3u_path_fixer_optimized.js  new_similarity_algorithm.js  optimized_database_manager.js  optimized_similarity_views.sql  optimized_sql_queries.sql  optimized_sql_queries_cleaned.sql  (+59 more)
py/: .gitignore  PlaylistOrganizer.spec  README.md  __init__.py  __main__.py  algorithm_explanation.py  apiserver.py  comprehensive_similarity_analysis.py  config.py  init.py  main.py  optimize_database_indexes.py  perfect_similarity_algorithm.py  playlist_organizer.spec  pyproject.toml  requirements.txt  similarity_analysis_test_system.py  similarity_detailed_analysis_system.py  similarity_logic_analysis.py  test_improved_algorithm.py
py/infrastructure/: localization.py
py/scripts/: __init__.py  build_dmg.py  poetry_runner.py  run_checks.py
(+470 files in other folders)
